--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,13 +24,12 @@
         android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
-        android:tint="@color/pink"
         android:src="@drawable/ic_add_card"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/home_title_text"
-        android:layout_marginTop="20dp" />
-
+        android:layout_marginTop="20dp"
+        app:tint="@color/pink" />
 
     <View
         android:layout_width="match_parent"
@@ -40,7 +39,7 @@
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:maxWidth="0dp"
         app:tabMode="fixed"
@@ -49,21 +48,18 @@
         app:tabIndicatorHeight="0dp"
         app:tabTextAppearance="@style/MyCustomTabTextAppearance"
         android:layout_marginTop="10dp"
+        app:layout_constraintEnd_toStartOf="@+id/tab_page_add"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/home_title_text" />
 
-    <EditText
-        android:id="@+id/function_edit"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:hint="メモ：タッチパネルをオフにする"
-        android:textSize="20sp"
-        android:gravity="center"
-        android:maxLines="1"
-        android:inputType="text"
+    <ImageView
+        android:id="@+id/tab_page_add"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:src="@drawable/ic_add_page"
+        app:tint="@color/blue"
         app:layout_constraintTop_toTopOf="@+id/tabLayout"
-        app:layout_constraintBottom_toBottomOf="@id/tabLayout"
-        app:layout_constraintStart_toEndOf="@id/tabLayout"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <androidx.viewpager2.widget.ViewPager2
