ver1.2.a edit string.

--- a/app/src/main/res/layout/fragment_nfc_card.xml
+++ b/app/src/main/res/layout/fragment_nfc_card.xml
@@ -10,7 +10,7 @@
         android:layout_width="250dp"
         android:layout_height="50dp"
         android:gravity="center"
-        android:text="名前"
+        android:text="@string/fragment_card_name"
         android:textSize="30sp"
         android:background="@color/blue"
         app:layout_constraintTop_toTopOf="parent"
@@ -23,7 +23,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:gravity="center"
-        android:text="カード番号"
+        android:text="@string/fragment_card_id"
         android:textSize="30sp"
         android:background="@color/light_blue"
         app:layout_constraintTop_toTopOf="parent"
@@ -36,7 +36,7 @@
         android:layout_width="250dp"
         android:layout_height="0dp"
         android:gravity="center"
-        android:text="削除"
+        android:text="@string/fragment_card_remove"
         android:textSize="30sp"
         android:background="@color/blue"
         app:layout_constraintTop_toTopOf="parent"
