--- a/app/src/main/res/layout/recycler_not_card.xml
+++ b/app/src/main/res/layout/recycler_not_card.xml
@@ -9,6 +9,6 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:textSize="30sp"
-        android:text="カードは登録されていません" />
+        android:text="@string/fragment_not_card" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
