--- a/app/src/main/res/layout/activity_csv.xml
+++ b/app/src/main/res/layout/activity_csv.xml
@@ -7,10 +7,21 @@
     tools:context=".CsvActivity">
 
     <Button
+        android:id="@+id/back_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/back_button"
+        android:textSize="25sp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp" />
+
+    <Button
         android:id="@+id/csv_import_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="csvインポート"
+        android:text="@string/csv_import"
         android:textSize="25sp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -21,22 +32,11 @@
         android:id="@+id/csv_output_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="csvアウトプット"
+        android:text="@string/csv_output"
         android:textSize="25sp"
         android:layout_marginTop="30dp"
         app:layout_constraintTop_toBottomOf="@+id/csv_import_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
-
-    <Button
-        android:id="@+id/back_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="戻る"
-        android:textSize="25sp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
