--- a/app/src/main/res/layout/activity_resister.xml
+++ b/app/src/main/res/layout/activity_resister.xml
@@ -10,7 +10,7 @@
         android:id="@+id/place_card_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="登録したいカードをかざしてください"
+        android:text="@string/resister_label"
         android:textSize="25sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -21,7 +21,7 @@
         android:id="@+id/back_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="戻る"
+        android:text="@string/back_button"
         android:textSize="25sp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
